completed lab4 part 2
